--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="sidebar">
     <div>
       <center>
-      <img class="testimonial-image" src="images/pic.jpg" alt="profile" style="margin: 20px 0px;">
+      <img class="testimonial-image" src="pic.jpg" alt="profile" style="margin: 20px 0px;">
       <h5 style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight: 600; margin-bottom: 20px;" >Candidate</h5>
       <canvas id="radar-chart" style="background-color: white; width: 100%;"></canvas>
     </center>
